Use webpack+babel to bundle game

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Phaser Template</title>
+    <title>The Watcher</title>
 
     <style>
       html,
@@ -27,10 +27,7 @@
       }
     </style>
   </head>
-
   <body>
     <div id="game-container"></div>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.js"></script>
-    <script src="./index.js" type="module"></script>
   </body>
 </html>
