Add og meta tag for sharing

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <meta property="og:url"             content="https://the-watcher.netlify.app/" />
+    <meta property="og:type"            content="website" />
+    <meta property="og:title"           content="The Watcher" />
+    <meta property="og:description"     content="The Watcher is a story about people, relationships, forms of control, interactions and human nature, with a dark twist." />
+    <meta property="og:image"           content="public/splash.png">
+    <meta property="og:image:width"     content="1000">
+    <meta property="og:image:height"    content="700">
+    <meta property="og:locale"          content="en_US">
+
     <title>The Watcher</title>
 
     <style>
