--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta property="og:type"            content="website" />
     <meta property="og:title"           content="The Watcher" />
     <meta property="og:description"     content="The Watcher is a story about people, relationships, forms of control, interactions and human nature, with a dark twist." />
-    <meta property="og:image"           content="public/splash.png">
+    <meta property="og:image"           content="https://the-watcher.netlify.app/public/splash.png">
     <meta property="og:image:width"     content="1000">
-    <meta property="og:image:height"    content="700">
+    <meta property="og:image:height"    content="450">
     <meta property="og:locale"          content="en_US">
 
     <title>The Watcher</title>
